force-app/main/default/objects/Requirement_Version__c/Requirement_Version__c.object-meta.xml
<CustomObject>
    <description>The purpose of this object is for tracking changes to requirements</description>
    <label>Requirement Version</label>
    <nameField>
        <displayFormat>REQ-{00000}</displayFormat>
        <label>Version No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirement Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>