force-app/main/default/objects/Requirement_Version__c/fields/Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Date__c</fullName>
    <inlineHelpText>When was the decision made to change the requirement?</inlineHelpText>
    <label>Change Date</label>
    <type>Date</type>
</CustomField>