force-app/main/default/objects/Requirement_Version__c/fields/Defect__c.field-meta.xml
<CustomField>
    <fullName>Defect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this new requirement came from resolving a defect, associate the defect here</inlineHelpText>
    <label>Defect</label>
    <referenceTo>Defect__c</referenceTo>
    <relationshipLabel>New Requirements</relationshipLabel>
    <relationshipName>Requirement_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>