force-app/main/default/objects/Requirement_Version__c/fields/Original_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Original_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Original Requirement</label>
    <type>Checkbox</type>
</CustomField>