force-app/main/default/objects/Requirement_Version__c/fields/Receipts__c.field-meta.xml
<CustomField>
    <fullName>Receipts__c</fullName>
    <inlineHelpText>Where was the decision made? In a meeting? Email? Provide screenshots, meeting minutes and quotes, if applicable.</inlineHelpText>
    <label>Receipts</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>