force-app/main/default/objects/Requirement_Version__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who requested this change in requirements? Who is the stakeholder/product owner?</inlineHelpText>
    <label>Requestor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requirement Versions</relationshipLabel>
    <relationshipName>Requirement_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>