force-app/main/default/objects/Requirement_Version__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <label>Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Requirement Versions</relationshipLabel>
    <relationshipName>Requirement_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>